--- a/draft.tex
+++ b/draft.tex
@@ -372,14 +372,8 @@ In order to make the mechanism incentive compatible for the low types, some valu
 \begin{theorem}
 \emph{Mediation}
 \begin{enumerate}
-		\item[(a)] The mediation mechanism $M$ is incentive compatible for the low type when the specified concession is greater than or equal to $\frac{\left(1 - \de_l \right)\left(T +D \right)}{p - e\left(p +(1-\de_l)T +W \right)}$ and $p > e\left(p+\left(1-\de_l\right)T + W\right)$.
-		\item[(b)] The mediation mechanism $M$ is incentive compatible for the high type when
-			\begin{itemize}
-				\item[(i)] $\de_h(T+D)\geq W$ and $e(T-W) >1 -\de_h$;
-				\item[(ii)] $\de_h(T+D)\geq W$, $e(T-W) <1 -\de_h$ and the specified concession is less than or equal to $\frac{\de_h(T+D)-W}{1-\de_h - e\left(T +W \right)}$; or
-				\item [(iii)] $\de_h(T+D)\leq W$, $e(T-W) >1 -\de_h$ and the specified concession is greater than or equal to $\frac{\de_h(T+D)-W}{1-\de_h - e\left(T +W \right)}$.
-			\end{itemize}
-		\item[(c)] The mediation mechanism $M$ is always individually rational for the low type. If $Te > (1-\de_h)(1-e)$, the high type's individual rationality constraint implies an additional restriction that the specified concession is less than or equal to $\frac{ T + D - W}{Te - (1-\de_h)(1-e)}$.
+		\item[(a)] The mediation mechanism $M$ is incentive compatible and individually rational for the low type when the specified concession is greater than or equal to $\frac{\left(1 - \de_l \right)\left(T +D \right)}{p - e\left(p +(1-\de_l)T +W \right)}$ and $p > e\left(p+\left(1-\de_l\right)T + W\right)$.
+		\item[(b)] The mediation mechanism $M$ is incentive compatible and individually rational for the high type when the specified concession is less than or equal to $\frac{ T + D - W}{Te - (1-\de_h)(1-e)}$.
 \end{enumerate}
 	\label{theorem:med}
 \end{theorem}
@@ -742,7 +736,9 @@ Canceling like terms and rearranging, we have
 			Since we assume throughout that gifts must be non-negative, each of $T, W$ and $D$ are positive and $0 \leq \de_l \leq 1$, this inequality can never hold.	\hfill $\blacksquare$\\
 			\\
 \emph{Proof of Theorem~\ref{theorem:med}:}\\
-(a) For the general form of the low type incentive compatibility constraint, we start from Expression~\ref{eq:med} and add back in the $e$'s that were removed when assuming $e=1$ in the proof of Theorem~\ref{theorem:med}. So we start from
+(a) The low type's individual rationality constraint is satisfied trivially: the low type gets the `War' payoff forever outside the mechanism; it also gets the `War' payoff forever \emph{inside} the mechanism while not giving or receiving any concession.
+
+For the general form of the low type incentive compatibility constraint, we start from Expression~\ref{eq:med} and add back in the $e$'s that were removed when assuming $e=1$ in the proof of Theorem~\ref{theorem:med}. So we start from
 \begin{equation*}
 			W-D \geq 
 			\left(1-\de_l\right) \left[T + Teg_h + W + Weg_h \right] + \de_l \left(W + Weg_h -D \right) + peg_h - pg_h
@@ -762,39 +758,13 @@ The right hand side is positive. If the left hand side were negative, we would h
 \end{equation}
 If Condition~\ref{eq:med3} is met, the mechanism is incentive compatible for the low type.\\
 (b) We now turn to the high type, whose incentive compatibility constraint is
-$$pX_{TT}^h+(1-p)X_{FF}^h - pg_h +peg_h \geq X_{FF}^h $$
-It is always optimal for the high type to invest in civil society when they truthfully reveal and to invest in the military when they lie about their type. Thus the constraint becomes
-\begin{multline*}
-  \frac{p}{1-\de_h}\left(T + Teg \right) - pg +peg+ \frac{1-p}{1-\de_h}\left(W-D\right) \geq \\
-	p\left(T + W + Weg +eg + \frac{\de_h}{1-\de_h}\left(W + Weg -D\right)\right) + \frac{1-p}{1-\de_h}\left(W-D\right)
-\end{multline*}
-This simplifies to 
-\begin{equation*}
-  \frac{1}{1-\de_h}\left(T + Teg \right) - g \geq T + W + Weg + \frac{\de_h}{1-\de_h}\left(W + Weg -D\right)
-\end{equation*}
-%\begin{equation*}
-%  T + Teg - ( 1-\de_h)g \geq ( 1-\de_h)\left(T + W + Weg\right) + \de_h\left(W + Weg -D\right)
-%\end{equation*}
-\begin{equation*}
-  T + Teg - ( 1-\de_h)g \geq ( 1-\de_h)T + W + Weg - \de_h D
-\end{equation*}
-%\begin{equation*}
-%  Teg - Weg -( 1-\de_h)g \geq -\de_h T + W - \de_h D
-%\end{equation*}
 \begin{equation}
-  g\left(Te - We -( 1-\de_h)\right) \geq W - \de_h (D+T)
+	pX_{TT}^h+(1-p)X_{FF}^h - pg_h +peg_h \geq X_{FF}^h
 	\label{eq:med4}
 \end{equation}
-We have four cases to consider depending on signs:
-\begin{itemize}
-	\item [(i)] When $\de_h(T+D)\geq W$ and $e(T-W) >1-\de_h$, then we have a lower bound on the size of the gift that is non-positive, i.e. no additional restriction beyond the restrictions needed to satisfy the low type incentive compatibility constraint.
-	\item [(ii)] When $\de_h(T+D)\geq W$ and $e(T-W) <1-\de_h$, Expression~\ref{eq:med4} is a non-negative upper bound on the size of the gift.
-	\item [(iii)] When $\de_h(T+D)\leq W$ and $e(T-W) >1-\de_h$, Expression~\ref{eq:med4} is a non-negative lower bound on the size of the gift, which may be larger or smaller than the bound in Expression~\ref{eq:med3}. This is an additional restriction beyond that for the low type only when the bound is larger than the one in Expression~\ref{eq:med3}.
-	\item [(iv)] When $\de_h(T+D)\leq W$ and $e(T-W) <1-\de_h$, Expression~\ref{eq:med4} is a non-positive upper bound on the size of the gift and therefore there is no incentive compatible mechanism.
-\end{itemize}
-(c): The low type's individual rationality constraint is satisfied trivially: the low type gets the `War' payoff forever outside the mechanism; it also gets the `War' payoff forever \emph{inside} the mechanism while not giving or receiving any concession.
+It is always optimal for the high type to invest in civil society when they truthfully reveal. When a high type misrepresents itself as a low type, the mechanism specifies that gifts are exchanged only when there are two high types. This means that there will be no concessions when a high type lies. This implies that Expression~\ref{eq:med4} is also the individual rationality constraint since outside the mechanism they get the `War' payoff and exchange no concessions.
 
-For the high type, we need
+Thus the constraint for both incentive compatibility and individual rationality is
 \begin{equation*}
   \frac{p}{1-\de_h}\left(T + Teg \right) - pg +peg+ \frac{1-p}{1-\de_h}\left(W-D\right) \geq \frac{1}{1-\de_h}\left(W-D\right)
 \end{equation*}
@@ -811,9 +781,7 @@ This simplifies to
 \begin{equation*}
   T + D - W \geq \left[Te - (1-\de_h)(1-e)\right]g 
 \end{equation*}
-If $Te < (1-\de_h)(1-e)$, this is a negative lower bound on the size of the concession and thus implies no additional restriction. If $Te = (1-\de_h)(1-e)$, there is again no restriction because $T+D >W$ by assumption. If $Te > (1-\de_h)(1-e)$, the high type's individual rationality constraint requires that $\frac{ T + D - W}{Te - (1-\de_h)(1-e)}>g$.
-
-\hfill $\blacksquare$\\
+If $Te < (1-\de_h)(1-e)$, this is a negative lower bound on the size of the concession and thus implies no additional restriction. If $Te = (1-\de_h)(1-e)$, there is again no restriction because $T+D >W$ by assumption. If $Te > (1-\de_h)(1-e)$, the mechanism is both individually rational and incentive compatible for the high type when $\frac{ T + D - W}{Te - (1-\de_h)(1-e)}>g$. \hfill $\blacksquare$\\
 
 
 As before, the optimal gift is the one where Expression~\ref{eq:med3} holds with equality [NOT NECESSARILY BECAUSE OF HIGH TYPE IC]. We call this value $g^M$. We see here that $g^M$ depends on $e$, which is also the choice of the mediator \emph{and} that we must have $\overline{e} = p - e \left( p + T - \de_l T + W \right) > 0$ in order for the optimal concession to be both positive and finite. Both the optimal concession increases toward infinity as $e$ approaches $\frac{p}{p + \left(1-\de_l\right) + W}$, which is the value that makes the denominator of $g^M$ equal to 0.
